Changes to metadata API requirements table

--- a/metadata-api/index.html
+++ b/metadata-api/index.html
@@ -1761,14 +1761,14 @@
 
             <table class="image-api-table">
               <tr>
-                <th></th>
+                <th class="visibility-hidden"></th>
                 <th colspan="3">Descriptive</th>
                 <th colspan="2">Rights</th>
                 <th colspan="7">Technical</th>
                 <th colspan="3">Linking</th>
               </tr>
               <tr>
-                <td></td>
+                <td class="visibility-hidden"></td>
                 <td>label</td>
                 <td>metadata</td>
                 <td>description</td>
