--- a/image-api/index.html
+++ b/image-api/index.html
@@ -865,7 +865,7 @@
   "tile_width" : 1024,
   "tile_height" : 1024,
   "formats" : [ "jpg", "png" ],
-  "qualities" : [ "native", "grey" ]
+  "qualities" : [ "native", "grey" ],
   "profile" : "http://library.stanford.edu/iiif/image-api/1.1/compliance.html#level0"
 }</p>
             <p>
