More CSS changes

--- a/image-api/index.html
+++ b/image-api/index.html
@@ -47,30 +47,25 @@
 
           <section class="editors-authors wrapper">
             <p>
-              <strong>Editors</strong> <br>
-              Stuart Snydman<sup>1</sup>,
-              Simeon Warner<sup>2</sup>,
-              Robert Sanderson<sup>3</sup>,
-              Jon Stroop<sup>4</sup>
+              <strong>Editors</strong>
+              <ul class="names">
+                <li>Stuart Snydman, Stanford University</li>
+                <li>Simeon Warner, Cornell University</li>
+                <li>Robert Sanderson, Los Alamos National Laboratory</li>
+                <li>Jon Stroop, Princeton University</li>
+              </ul>
             </p>
             <p>
-              <strong>Authors</strong> <br>
-              Ben Albritton<sup>1</sup>,
-              Peter James<sup>5</sup>,
-              Neil Jefferies<sup>6</sup>,
-              Christopher Jesudurai<sup>1</sup>,
-              Sean Martin<sup>5</sup>,
-              Roger Mathisen<sup>7</sup>,
-              Petter Rønningsen<sup>7</sup>
-            </p>
-            <p>
-              <sup>1</sup> <em>Stanford University</em>,
-              <sup>2</sup> <em>Cornell University</em>,
-              <sup>3</sup> <em>Los Alamos National Laboratory</em>,
-              <sup>4</sup> <em>Princeton University</em>,
-              <sup>5</sup> <em>British Library</em>,
-              <sup>6</sup> <em>Oxford University</em>,
-              <sup>7</sup> <em>National Library of Norway</em>
+              <strong>Authors</strong>
+              <ul class="names">
+                <li>Ben Albritton, Stanford University</li>
+                <li>Peter James, British Library</li>
+                <li>Neil Jefferies, Oxford University</li>
+                <li>Christopher Jesudurai, Stanford University</li>
+                <li>Sean Martin, British Library</li>
+                <li>Roger Mathisen, National Library of Norway</li>
+                <li>Petter Rønningsen, National Library of Norway</li>
+              </ul>
             </p>
           </section>
 
