--- a/image-api/index.html
+++ b/image-api/index.html
@@ -49,22 +49,22 @@
             <p>
               <strong>Editors</strong>
               <ul class="names">
-                <li>Stuart Snydman, Stanford University</li>
-                <li>Simeon Warner, Cornell University</li>
-                <li>Robert Sanderson, Los Alamos National Laboratory</li>
-                <li>Jon Stroop, Princeton University</li>
+                <li>Stuart Snydman,<em> Stanford University</em></li>
+                <li>Simeon Warner,<em> Cornell University</em></li>
+                <li>Robert Sanderson,<em> Los Alamos National Laboratory</em></li>
+                <li>Jon Stroop,<em> Princeton University</em></li>
               </ul>
             </p>
             <p>
               <strong>Authors</strong>
               <ul class="names">
-                <li>Ben Albritton, Stanford University</li>
-                <li>Peter James, British Library</li>
-                <li>Neil Jefferies, Oxford University</li>
-                <li>Christopher Jesudurai, Stanford University</li>
-                <li>Sean Martin, British Library</li>
-                <li>Roger Mathisen, National Library of Norway</li>
-                <li>Petter Rønningsen, National Library of Norway</li>
+                <li>Ben Albritton,<em> Stanford University</em></li>
+                <li>Peter James,<em> British Library</em></li>
+                <li>Neil Jefferies,<em> Oxford University</em></li>
+                <li>Christopher Jesudurai ,<em> Stanford University</em></li>
+                <li>Sean Martin,<em> British Library</em></li>
+                <li>Roger Mathisen,<em> National Library of Norway</em></li>
+                <li>Petter Rønningsen,<em> National Library of Norway</em></li>
               </ul>
             </p>
           </section>
