--- a/technical-details.html
+++ b/technical-details.html
@@ -46,8 +46,8 @@
           </header>
 
           <section class="section-quick-links">
-            <a class="button-turquoise" href="http://www-sul.stanford.edu/iiif/image-api/1.1/" target="_blank">IIIF Image API 1.1</a>
-            <a class="button-turquoise" href="http://www.shared-canvas.org/datamodel/iiif/metadata-api.html" target="_blank">IIIF Metadata API 1.0</a>
+            <a class="button-turquoise" href="/image-api/1.1/">IIIF Image API 1.1</a>
+            <a class="button-turquoise" href="/metadata-api/1.0">IIIF Metadata API 1.0</a>
           </section>
 
           <section class="quick-start wrapper">
@@ -106,7 +106,7 @@
             </ul>
             <p>
               Once you have deployed your image server, we highly recommend that you <a href="http://iiif-test.stanford.edu/" target="_blank">validate it</a> to confirm that it complies with the
-              IIIF Image API, and to determine its level of <a href="http://www-sul.stanford.edu/iiif/image-api/compliance.html" target="_blank">IIIF compliance</a>.
+              IIIF Image API, and to determine its level of <a href="/image-api/compliance.html">IIIF compliance</a>.
             </p>
           </section>
 
