Updates to metadata API names listing

--- a/metadata-api/1.0/index.html
+++ b/metadata-api/1.0/index.html
@@ -47,30 +47,23 @@
 
           <section class="editors-authors wrapper">
             <p>
-              <strong>Editors</strong> <br>
-              Robert Sanderson<sup>1</sup>,
-              Ben Albritton<sup>2</sup>,
-              Markus Enders<sup>3</sup>
+              <strong>Editors</strong>
+              <ul class="names">
+                <li>Robert Sanderson,<em> Los Alamos National Laboratory</em></li>
+                <li>Ben Albritton,<em> Stanford University</em></li>
+                <li>Markus Enders,<em> British Library</em></li>
+              </ul>
             </p>
             <p>
               <strong>Contributors</strong> <br>
-              Michael Appleby<sup>4</sup>,
-              Mark Patton<sup>5</sup>,
-              Neil Jeffries<sup>6</sup>,
-              Tim Gollins<sup>7</sup>,
-              Simeon Warner<sup>8</sup>,
-              Jon Stroop<sup>9</sup>
-            </p>
-            <p>
-              <sup>1</sup> <em>Los Alamos National Laboratory</em>,
-              <sup>2</sup> <em>Stanford University</em>,
-              <sup>3</sup> <em>British Library</em>,
-              <sup>4</sup> <em>Yale University</em>,
-              <sup>5</sup> <em>John Hopkins University</em>,
-              <sup>6</sup> <em>University of Oxford</em>,
-              <sup>7</sup> <em>UK National Archives</em>,
-              <sup>8</sup> <em>Cornell University</em>,
-              <sup>9</sup> <em>Princeton University</em>
+              <ul class="names">
+                <li>Michael Appleby, <em>Yale University</em></li>
+                <li>Mark Patton, <em>John Hopkins University</em></li>
+                <li>Neil Jeffries, <em>University of Oxford</em></li>
+                <li>Tim Gollins, <em>UK National Archives</em></li>
+                <li>Simeon Warner, <em>Cornell University</em></li>
+                <li>Jon Stroop, <em>Princeton University</em></li>
+              </ul>
             </p>
           </section>
 
