Updates to API authors list

--- a/image-api/1.1/index.html
+++ b/image-api/1.1/index.html
@@ -59,6 +59,7 @@
               <strong>Authors</strong>
               <ul class="names">
                 <li>Ben Albritton,<em> Stanford University</em></li>
+                <li>Tom Cramer,<em> Stanford University</em></li>
                 <li>Peter James,<em> British Library</em></li>
                 <li>Neil Jefferies,<em> Oxford University</em></li>
                 <li>Christopher Jesudurai,<em> Stanford University</em></li>
