--- a/metadata-api/1.0/index.html
+++ b/metadata-api/1.0/index.html
@@ -58,6 +58,7 @@
               <strong>Contributors</strong> <br>
               <ul class="names">
                 <li>Michael Appleby, <em>Yale University</em></li>
+                <li>Tom Cramer,<em> Stanford University</em></li>
                 <li>Mark Patton, <em>John Hopkins University</em></li>
                 <li>Neil Jeffries, <em>University of Oxford</em></li>
                 <li>Tim Gollins, <em>UK National Archives</em></li>
