--- a/apis/metadata/index.html
+++ b/apis/metadata/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
   <head>
     <title></title>
-    <meta http-equiv="refresh" content="0; url=/metadata-api/1.0/" />
+    <meta http-equiv="refresh" content="0; url=/apis/metadata/1.0/" />
   </head>
   <body>
   </body>
