--- a/technical-details.html
+++ b/technical-details.html
@@ -46,8 +46,8 @@
           </header>
 
           <section class="section-quick-links">
-            <a class="button-turquoise" href="/image-api/1.1/">IIIF Image API 1.1</a>
-            <a class="button-turquoise" href="/metadata-api/1.0">IIIF Metadata API 1.0</a>
+            <a class="button-turquoise" href="/apis/image/1.1/">IIIF Image API 1.1</a>
+            <a class="button-turquoise" href="/apis/metadata/1.0">IIIF Metadata API 1.0</a>
           </section>
 
           <section class="quick-start wrapper">
@@ -71,7 +71,7 @@
             <p>
               In this step you will either deploy an image server for the first time, or adapt your existing image server to
               support the IIIF.  In either case your goal is to deploy an image server that fully supports delivery of images
-              via URL’s as specified in the <a href="http://www-sul.stanford.edu/iiif/image-api/1.1/" target="_blank">IIIF Image API v1.1</a>.
+              via URL’s as specified in the <a href="/apis/image/1.1/">IIIF Image API v1.1</a>.
             </p>
 
             <p class="question">
@@ -106,7 +106,7 @@
             </ul>
             <p>
               Once you have deployed your image server, we highly recommend that you <a href="http://iiif-test.stanford.edu/" target="_blank">validate it</a> to confirm that it complies with the
-              IIIF Image API, and to determine its level of <a href="/image-api/compliance.html">IIIF compliance</a>.
+              IIIF Image API, and to determine its level of <a href="/apis/image/compliance.html">IIIF compliance</a>.
             </p>
           </section>
 
@@ -144,8 +144,8 @@
             <h2>Implementation Tips &amp; Tricks</h2>
             <ul>
               <li>
-                Both the Image API <a href="http://www-sul.stanford.edu/iiif/image-api/1.1/#info" target="_blank">Image Information Request</a> and the Metadata
-                API are expressed as <a href="http://json-ld.org/" target="_blank">JSON-LD</a> serializations.
+                Both the Image API <a href="/apis/image/#image-info-request">Image Information Request</a> and the
+                <a href="/apis/metadata/">Metadata API</a> are expressed as <a href="http://json-ld.org/" target="_blank">JSON-LD</a> serializations.
               </li>
               <li>
                 The goal of IIIF is to make your image resources available to web applications hosted on other domains.  Since most of the image viewers use javascript,
