Added change log for v1.1

--- a/apis/image/1.1/index.html
+++ b/apis/image/1.1/index.html
@@ -1230,7 +1230,7 @@
               <tr>
                 <td>2013-06-17</td>
                 <td>ssnydman</td>
-                <td>Draft release 1.1. <a href="http://www-sul.stanford.edu/iiif/image-api/1.1/changelog_1.1.html" target="_blank">View change log</a>.</td>
+                <td>Draft release 1.1. <a href="change-log.html">View change log</a>.</td>
               </tr>
               <tr>
                 <td>2012-08-10</td>
