Added IIIF abbreviation in about page

--- a/about.html
+++ b/about.html
@@ -54,7 +54,10 @@
             </p>
             <p>
               A growing community of the world’s leading research libraries and image repositories have embarked on an effort to
-              collaboratively produce an interoperable technology and community framework for image delivery. IIIF has the following goals:
+              collaboratively produce an interoperable technology and community framework for image delivery.
+            </p>
+            <p>
+              IIIF (International Image Interoperability Framework) has the following goals:
             </p>
             <ul>
               <li>
