--- a/apps-demos.html
+++ b/apps-demos.html
@@ -156,7 +156,7 @@
                 <p>
                   The British Library deployed a demonstration of Mirador that allows the user to compare images from the British Library,
                   Yale University and Stanford University.  The BL adapted Mirador to display a YouTube video within the viewer that can be
-                  played will inspecting images.
+                  played while inspecting images.
                 </p>
               </li>
               <li>
