Added IIIF GitHub page link

--- a/community.html
+++ b/community.html
@@ -57,6 +57,9 @@
                 <pre><a href="https://groups.google.com/forum/#!forum/iiif-discuss" target="_blank">https://groups.google.com/forum/#!forum/iiif-discuss</a></pre>
               </dd>
             </dl>
+            <p>
+            IIIF GitHub page is at <a href="http://github.com/iiif">http://github.com/iiif</a>
+            </p>
           </section>
 
           <section class="participants wrapper">
